Micro/kubernetes/consul/consul-aliyun-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: consul-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "consul.ali.local.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consul
spec:
  hosts:
  - "consul.ali.local.com"
  gateways:
  - consul-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: test-consul-ui
